# BetApp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Procfile  README.md  apply_clean_fixes.sh  conftest.py  convert_to_camel.py  deploy-trigger.txt  fix_all_web_tests.py  fix_final_tests.sh  fix_fixture_conflicts.sh  fix_remaining_56.sh  fix_remaining_tests.py  fix_specific_fixtures.py  fix_test_assertions.sh  fix_test_bodies.py  fix_tests_surgical.sh  fix_web_tests_s6.py  progress.txt  pyproject.toml  railway.json  requirements.txt  run_tests.py
.claude/: MEMORY.md  settings.json
.github/: CHARTER_ENFORCEMENT.md  SPRINT_TEMPLATE.md  TICKET_TEMPLATE.md  pull_request_template.md
alerts/: __init__.py  detector.py  models.py  service.py  store.py  triggers.py
app/: __init__.py  airlock.py  build_info.py  config.py  correlation.py  cost_tracker.py  delta_engine.py  explainability_adapter.py  grounding_score.py  history_store.py  main.py  mock_data.py  pipeline.py  proof.py  proof_summary.py  rate_limiter.py  sherlock_hook.py  structure_snapshot.py  tiering.py
auth/: __init__.py  middleware.py  models.py  password.py  service.py
billing/: __init__.py  products.py  service.py  stripe_client.py  webhooks.py
context/: __init__.py  apply.py  service.py  snapshot.py
contracts/: dna_contract_v1.json
dna-matrix/: pyproject.toml  requirements.txt
docs/: COMPLETE_SOURCE_SCHEMA.md  DATA_BINDING_POINTS.md  ENV_VARIABLES.md  EXECUTION_PLAN.md  FRONTEND_PRD.md  FUTURE_EXTRACTIONS.md  GOVERNANCE.md  LEG_ORDER_CONTRACT.md  RALPH_LOOP.md  RELEASE_NOTES.md  SPRINT_1_LOCK.md  UI_SPEC.md  (+6 more)
(+179 files in other folders)
